# graphql_fastapi_server

./: .dockerignore  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
app/: __init__.py  server.py
app/core/: __init__.py  settings.py
tests/: test_app.py
