[tool.poetry]
name = "app"
version = "0.1.0"
description = "backend-services with graphql"
authors = ["AD0791 <alexdisla1991@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
pydantic = "^1.9.1"
graphene-mongo = "^0.2.14"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
